Feature: auto set datasouce configuration through provisioning (#30)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,42 @@ services:
   loki:
     image: grafana/loki:2.5.0
     container_name: loki
+    restart: always
+    user: root
     volumes:
       - ./loki/data:/loki
       - ./loki/config.yaml:/etc/loki/local-config.yaml
   grafana:
     image: grafana/grafana-oss:latest
+    container_name: grafana
+    restart: always
+    user: root
     volumes:
       - ./grafana/data:/var/lib/grafana
       - ./grafana/panels:/etc/dashboards
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     ports:
       - "3000:3000"
-    container_name: grafana
   vector:
     image: timberio/vector:0.X-alpine
+    container_name: vector
+    restart: always
     volumes:
       - ./vector/vector.toml:/etc/vector/vector.toml
-    container_name: vector
     depends_on:
       - loki
   traffic_scraper:
     image: vi0oss/websocat:0.10.0
     container_name: traffic_scraper
+    restart: always
     command: -v --autoreconnect-delay-millis 15000 autoreconnect:ws://$CLASH_HOST/traffic?token=$CLASH_TOKEN autoreconnect:tcp:vector:9000
     depends_on:
       - vector
   tracing_scraper:
     image: vi0oss/websocat:0.10.0
     container_name: tracing_scraper
+    restart: always
     command: -v --autoreconnect-delay-millis 15000 autoreconnect:ws://$CLASH_HOST/profile/tracing?token=$CLASH_TOKEN autoreconnect:tcp:vector:9000
     depends_on:
       - vector
