--- a/vector/vector.toml
+++ b/vector/vector.toml
@@ -1,9 +1,10 @@
+log_schema.host_key = "reportNode"
+
 [sources.mixed]
 type = "socket"
 address = "0.0.0.0:9000"
 mode = "tcp"
 decoding.codec = "json"
-host_key = ""
 
 [transforms.traffic-input]
 type = "filter"
